# math_engine

./: .dockerignore  .env.example  .gitignore  APPLICATIONS.md  CHANGELOG.md  Dockerfile  GETTING_STARTED.md  INSTALL.md  PHILOSOPHY.md  README.md  RELEASING.md  SCHEMA.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
frontend/: index.html
frontend/static/: app.js  style.css
pru_math/: __init__.py  __main__.py  api.py  config.py  exporter.py  fingerprint.py  graph.py  hypothesizer.py  learner.py  narrator.py  parser.py  problem_types.py  reasoner.py  retrieval.py  rewriter.py  rules.py  server.py  settings.py  store.py  verifier.py
pru_math/frontend/: index.html
pru_math/frontend/static/: app.js  style.css
pru_math/tools/: __init__.py  base.py  numeric_tool.py  registry.py  sympy_tool.py  timeout.py  wolfram_tool.py  z3_tool.py
tests/: conftest.py  test_api.py  test_auto_scan.py  test_cross_verify_priority.py  test_cross_verify_reasoner.py  test_export_import.py  test_fingerprint.py  test_graph.py  test_hypotheses_api.py  test_hypothesizer.py  test_numeric_tool.py  test_parser.py  test_parser_nl.py  test_phase10_distribution.py  test_phase11_notebook.py  test_phase12_chains.py  test_phase7_reasoning.py  test_phase9_rewrite.py  test_reasoner.py  test_retrieval.py  test_sessions.py  test_settings.py  test_store.py  test_sympy_tool.py  test_tool_timeout.py  test_tools_registry.py  test_verifier.py  test_wolfram_tool.py  test_z3_tool.py
